<resources>
    <string name="app_name">Fantasy Music Player</string>
    <string name="planets_array">planets_array</string>
    <string name="OpenNavigation">OpenNavigation</string>
    <string name="CloseNavigation">CloseNavigation</string>
    <string name="ad_unit_banner">ca-app-pub-9361667647952775/6307997641</string>
    <string name="ad_unit_banner1">ca-app-pub-9361667647952775/3214930443</string>
    <string name="cannot_connect_network">Network error, Tap to retry!</string>
    <string name="no_network_connection">No network connection</string>
    <string name="server_busy">Sorry, server is overload, please try again later!</string>
    <string name="album">Album</string>
    <string name="track">Track</string>
    <string name="playlist">Playlist</string>
    <string name="downloaded">Downloaded</string>
    <string name="search_offline">Search Offline</string>
    <string name="music_offline">MUSIC OFFLINE</string>
    <string name="music_online">MUSIC ONLINE</string>
    <string name="about_us">ABOUT US</string>
    <string name="korean_music">Korean Music</string>
    <string name="japanese_music">Japanese Music</string>
    <string name="vietnamese_music">Vietnamese Music</string>
    <string name="us_uk_music">US-UK Music</string>
    <string name="chinese_music">Chinese Music</string>
    <string name="other_music">Other Music</string>
    <string name="chart">Chart</string>
    <string name="new_upload">New Upload</string>
    <string name="new_download">New Download</string>
    <string name="search_online">Search Online</string>
    <string name="singer">Singer</string>
    <string name="album_detail">Album Detail</string>
    <string name="not_support">This song was not supported!</string>
    <string name="quality">Quality</string>
    <string name="create_folder">You need to create download folder!</string>
    <string name="one_song">song</string>
    <string name="mul_song">songs</string>
    <string name="playlist_online">Playlist Online</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="create_playlist">Create new Playlist</string>
    <string name="rename_playlist">Input new folder name</string>
    <string name="playlist_exist">Playlist exist</string>
    <string name="playlist_null">Playlist name invalid</string>
    <string name="track_exist">Track existed</string>
    <string name="playlist_no_track">There is no track</string>
    <string name="share">Share This App</string>
    <string name="vote_us">Vote Us</string>
    <string name="share_via">Share Via</string>
    <string name="new_version">Check for new version</string>
    <string name="follow_facebook">Follow us on Facebook</string>
    <string name="email">Email customer service: kenungstudio@gmail.com</string>
    <string name="develop_by">Developed by KenungStudio team</string>
    <string name="about_us_small">About Us</string>
    <string name="input_playlits_name">Input Playlist Name</string>
    <string name="choose">OK</string>
    <string name="set_as_default">Set as default</string>
    <string name="delete_track">Delete</string>
    <string name="unable_delete">Unable Delete</string>
    <string name="playlist_delete">Delete</string>
    <string name="playlist_share">Share playlist</string>
    <string name="playlist_rename">Rename</string>
    <string name="remove_out_of_playlist">Remove</string>
    <string name="unable_remove">Unable remove</string>
    <string name="playlist_offline">Playlist Offline</string>
    <string name="folder">Folder</string>
</resources>
